# NX-Mod-Manager

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  README_EN.md  app.cpp  app.hpp  audio_manager.cpp  lang_manager.cpp  mod_manager.cpp  mod_manager.hpp  nvg_util.cpp  nvg_util.hpp
assets/romfs/lang/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  zh-Hans.json  zh-Hant.json
lib/libhaze/: CMakeLists.txt  libhaze_log.txt
lib/libhaze/include/: haze.h  haze.hpp
lib/libhaze/source/: async_usb_server.cpp  event_reactor.cpp  haze.cpp  log.cpp  ptp_object_database.cpp  ptp_object_heap.cpp  ptp_responder.cpp  ptp_responder_mtp_operations.cpp  (+3 more)
lib/libnxtc-add-version/: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md
lib/switch-libpulsar/: CMakeLists.txt
lib/switch-libpulsar/include/pulsar/archive/: archive.h  archive_file.h
lib/switch-libpulsar/include/pulsar/bfstm/: bfstm.h
lib/switch-libpulsar/include/pulsar/player/: player.h  player_load_formats.h
lib/switch-libpulsar/src/archive/: archive.c  archive_file.c
lib/switch-libpulsar/src/bfstm/: bfstm.c
lib/switch-libpulsar/src/player/: player.c  player_load.c  player_load_formats.c
src/: Pinyin-onefile.cpp  app.cpp  app.hpp  app_part1.cpp  app_part2.cpp  async.hpp  audio_manager.cpp  audio_manager.hpp  json_manager.cpp  json_manager.hpp  keyboard_helper.hpp  lang_manager.cpp  lang_manager.hpp  main.cpp  mod_manager.cpp  mod_manager.hpp  mtp_manager.cpp  mtp_manager.hpp  nvg_util.cpp  nvg_util.hpp
src/utils/: logger.cpp  logger.hpp
(+23 files in other folders)
